feat: 카테고리 조회 실패 테스트 케이스 작성 완료